# honeycluster

./: .gitignore  CONTRIBUTING.md  Makefile  Makefile_aks  Makefile_attack  Makefile_calibrate_kubehound  Makefile_gke  Makefile_kind  Makefile_rke2  README.md  clickhouse-init.sql  create.py  id_rsa.pub  priv-create.sh  rbac.yaml  runall.sh  signal.wasm  sortuniquekeys.csv  uniquekeys.csv
.github/: FUNDING.yml
analysis/hive_sentinel/: .env.template  Dockerfile  README.md  docker-compose.yaml  main.py  print-pixie-auth.sh  pyproject.toml  stix_bundles.json
analysis/hive_sentinel/scripts/: init_kubescape_data.py  kubescape.json
analysis/hive_sentinel/src/: __init__.py  clickhouse_client.py  config.py  pixie_client.py  routes.py
analysis/hive_sentinel/src/clickhouse_api/: controller.py  repository.py  service.py
analysis/hive_sentinel/src/etl/: controller.py  pixie_etl.py  stix_etl.py
analysis/hive_sentinel/src/kubescape_log/: controller.py  reader.py
analysis/hive_sentinel/src/severity_analysis/: analyzer.py  controller.py  reader.py
analysis/hive_sentinel/src/stix/: attack_patterns.py  controller.py  core.py  matcher.py
analysis/hive_sentinel/src/tetra_log/: controller.py  reader.py
analysis/hive_sentinel/tests/: conftest.py  test_clickhouse_api_e2e.py  test_pattern_etl_e2e.py  test_pattern_match_etl.py  test_pixie_etl.py  test_pixie_etl_e2e.py  test_pixie_stix.py  test_routes.py  test_stix_etl.py
analysis/hive_sentinel/tests/data/: kubescape_logs.json  kubescape_stix.json
pixie-analysis/pixie-pyton/: pyproject.toml
redis/lightening-rod/: Dockerfile  deployment.yaml  manual.py  pyproject.toml  testpost.sh
(+594 files in other folders)
