[tool.poetry]
name = "hive-sentinel"
version = "0.1.0"
description = ""
authors = ["Mehmet Berk Gürçay <mbgurcay@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
flask = ">=3.1.0,<4.0.0"
pxapi = "^0.9.0"
pandas = "^2.2.3"
stix2 = "^3.0.1"
stix2-matcher = "^3.0.0"
dotenv = "^0.9.9"
stix2-validator = "^3.2.0"
clickhouse-connect = "^0.8.17"
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

