[tool.poetry]
name = "stixtransform"
version = "0.1.0"
description = "translate tetragon log to stix2 patterns"
authors = ["Constanze Roedig"]
license = "Apache 2"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
redis = "^5.2.1"
stix2 = "^3.0.0"
stix2-matcher = "^3.0.0"
flask = "^2.1.2"
setuptools = ">=65.5.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
